force-app/main/default/objects/TestCase__c/fields/CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>CaseStatus__c</fullName>
    <label>Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>