force-app/main/default/objects/TestCase__c/fields/DevName__c.field-meta.xml
<CustomField>
    <fullName>DevName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DevTestCases</relationshipName>
    <type>Lookup</type>
</CustomField>