force-app/main/default/objects/TestCase__c/fields/ExpectedOutcome__c.field-meta.xml
<CustomField>
    <fullName>ExpectedOutcome__c</fullName>
    <label>Expected Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>