force-app/main/default/objects/TestCase__c/fields/FailCount__c.field-meta.xml
<CustomField>
    <fullName>FailCount__c</fullName>
    <label>Fail Count</label>
    <summaryFilterItems>
        <field>TestResult__c.Fail__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>TestResult__c.TestCaseId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>