force-app/main/default/objects/TestCase__c/fields/IsFail__c.field-meta.xml
<CustomField>
    <fullName>IsFail__c</fullName>
    <formula>FailCount__c &gt;= 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Fail?</label>
    <type>Checkbox</type>
</CustomField>