force-app/main/default/objects/TestCase__c/fields/IsInProgress__c.field-meta.xml
<CustomField>
    <fullName>IsInProgress__c</fullName>
    <formula>TestResultCount__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is In Progress?</label>
    <type>Checkbox</type>
</CustomField>