force-app/main/default/objects/TestCase__c/fields/IsPass__c.field-meta.xml
<CustomField>
    <fullName>IsPass__c</fullName>
    <formula>AND(TestResultCount__c  == PassCount__c, TestResultCount__c &gt;= 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Pass?</label>
    <type>Checkbox</type>
</CustomField>