force-app/main/default/objects/TestCase__c/fields/PassCount__c.field-meta.xml
<CustomField>
    <fullName>PassCount__c</fullName>
    <label>Pass Count</label>
    <summaryFilterItems>
        <field>TestResult__c.Pass__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>TestResult__c.TestCaseId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>