force-app/main/default/objects/TestCase__c/fields/ScenarioName__c.field-meta.xml
<CustomField>
    <fullName>ScenarioName__c</fullName>
    <label>Scenario Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>