force-app/main/default/objects/TestCase__c/fields/TestCase__c.field-meta.xml
<CustomField>
    <fullName>TestCase__c</fullName>
    <label>Test Case</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>