force-app/main/default/objects/TestCase__c/fields/TestDefectResolveCount__c.field-meta.xml
<CustomField>
    <fullName>TestDefectResolveCount__c</fullName>
    <label>Test Defect Resolve Count</label>
    <summaryForeignKey>TestResult__c.TestCaseId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>