force-app/main/default/objects/TestCase__c/fields/TestResultCount__c.field-meta.xml
<CustomField>
    <fullName>TestResultCount__c</fullName>
    <formula>PassCount__c + FailCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Result Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>