force-app/main/default/objects/TestCase__c/fields/TestScenario__c.field-meta.xml
<CustomField>
    <fullName>TestScenario__c</fullName>
    <label>Test Scenario</label>
    <referenceTo>TestScenario__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>TestCases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>