force-app/main/default/objects/TestCase__c/fields/TestStep__c.field-meta.xml
<CustomField>
    <fullName>TestStep__c</fullName>
    <label>Test Step</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>