force-app/main/default/objects/TestCase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CaseStatus__c</columns>
    <columns>DevName__c</columns>
    <columns>Tester__c</columns>
    <columns>PassCount__c</columns>
    <columns>FailCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>